[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Baloon.gd" type="Script" id=1]
[ext_resource path="res://assets/img/fixed/baloon_red.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/sfx/pop.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/img/fixed/explosion.png" type="Texture" id=4]
[ext_resource path="res://assets/audio/sfx/oops.wav" type="AudioStream" id=5]



[sub_resource type="PhysicsMaterial" id=1]
bounce = 1.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 43.5575
height = 27.0944

[node name="BaloonRed" type="RigidBody2D"]
input_pickable = true
mass = 0.0204082
physics_material_override = SubResource( 1 )
gravity_scale = 0.5
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7.29762 )
shape = SubResource( 2 )

[node name="Baloon" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_rect = Rect2( 100, 150, 100, 150 )

[node name="Art" type="Sprite" parent="Baloon"]
scale = Vector2( 0.3, 0.3 )

[node name="AudioPop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="AudioSay" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 1.0

[node name="AudioOops" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Explosion" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
[connection signal="input_event" from="." to="." method="_on_Baloon_input_event"]
[connection signal="finished" from="AudioPop" to="." method="_on_AudioPop_finished"]
[connection signal="finished" from="AudioSay" to="." method="_on_AudioSay_finished"]
